<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IAmRoot Sample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_github">Get on Github</string>
    <string name="action_info">info</string>
    <string name="info_details">This is a sample app for IAmRoot - a simple to use root checking Android library. IAmRoot gives an indication of root. Remember root==Übermensch, so there\'s no 100% way to check for root.</string>

    <string name="ok">OK</string>
    <string name="more_info">More Info</string>
    <string name="github_link">https://github.com/joielechong/IAmRoot</string>
    <!--<string name="root_checks_1">Root Management Apps</string>
    <string name="root_checks_2">Potentially Dangerous Apps</string>
    <string name="root_checks_3">Test Keys</string>
    <string name="root_checks_4">BusyBox Binary</string>
    <string name="root_checks_5">Su Binary</string>
    <string name="root_checks_6">Su Exists</string>
    <string name="root_checks_7">RW Paths</string>
    <string name="root_checks_8">Dangerous Props</string>
    <string name="root_checks_9">Root Native</string>
    <string name="root_checks_10">Root Cloaking Apps</string>
    <string name="root_checks_11">Selinux Flag Enabled (experimental)</string>-->

    <string name="test_names">Test Names</string>
    <string name="question_mark"> \? </string>
    <string name="indication_of_rooted">* it\'s an indication that the device \'might\' be rooted</string>

    <string name="root_checks_1">ROOT MANAGEMENT APPS</string>
    <string name="root_checks_2">POTENTIALLY DANGEROUS APPS</string>
    <string name="root_checks_3">TEST KEYS</string>
    <string name="root_checks_4">BUSYBOX BINARY</string>
    <string name="root_checks_5">SU BINARY</string>
    <string name="root_checks_6">SU EXISTS</string>
    <string name="root_checks_7">RW PATHS</string>
    <string name="root_checks_8">DANGEROUS PROPS</string>
    <string name="root_checks_9">ROOT NATIVE</string>
    <string name="root_checks_10">ROOT CLOAKING APPS</string>
    <string name="root_checks_11">SELINUX FLAG ENABLED (EXPERIMENTAL)</string>
</resources>
